# Tesi---Ray-Tracer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE
libs/: CMakeLists.txt  ray_tracer.c
shaders/: raytracer.frag
src/: main.cpp
src/Ray_Tracer/: renderer.cpp  renderer.h
